--- a/microservice-config-application.yml
+++ b/microservice-config-application.yml
@@ -1,1 +1,19 @@
-#×¢Òâ£ºÈç¹ûÔÚ¼ÇÊÂ±¾ÉÏ±àĞ´£¬ÏÂÃæµÄËõ½ø²»ÒªÊ¹ÓÃTabÀ´Ëõ½ø£¬²»È»±¨´í spring: profiles: active: dev # ¼¤»î¿ª·¢»·¾³ÅäÖÃ --- server: port: 4001 #¶Ë¿ÚºÅ spring: profiles: dev # ¿ª·¢»·¾³ application: name: microservice-config-dev --- server: port: 4002 #¶Ë¿ÚºÅ spring: profiles: prod # Éú²ú»·¾³ application: name: microservice-config-prod #±£´æÊ±×¢Òâ£¬Ñ¡Ôñ UTF-8 ±£´æ
+#æ³¨æ„ï¼šå¦‚æœåœ¨è®°äº‹æœ¬ä¸Šç¼–å†™ï¼Œä¸‹é¢çš„ç¼©è¿›ä¸è¦ä½¿ç”¨Tabæ¥ç¼©è¿›ï¼Œä¸ç„¶æŠ¥é”™
+spring:
+  profiles:
+    active: dev # æ¿€æ´»å¼€å‘ç¯å¢ƒé…ç½®
+---
+server:
+  port: 4001 #ç«¯å£å·
+spring:
+  profiles: dev # å¼€å‘ç¯å¢ƒ
+  application:
+    name: microservice-config-dev
+---
+server:
+  port: 4002 #ç«¯å£å·
+spring:
+  profiles: prod # ç”Ÿäº§ç¯å¢ƒ
+  application:
+    name: microservice-config-prod 
+#ä¿å­˜æ—¶æ³¨æ„ï¼Œé€‰æ‹© UTF-8 ä¿å­˜
