--- a/microservice-config-product.yml
+++ b/microservice-config-product.yml
@@ -42,13 +42,13 @@ mybatis:
   type-aliases-package: com.mengxuegu.springcloud.entities
   mapper-locations: classpath:mybatis/mapper/**/*.xml
 spring:
-  profiles: prod # 生产环境
+  profiles: prod # 开发环境
   application:
     name: microservice-product-config # ******服务名*******
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/car_loan_pro?serverTimezone=GMT%2B8 #数 据库连接地址，*****注意库名 db02***************
+    url: jdbc:mysql://127.0.0.1:3306/car_loan_pro?serverTimezone=GMT%2B8 #数 据库连接地址，*****注意库名 db01***************
     username: root
     password: 123456
     dbcp2:
@@ -62,7 +62,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-    defaultZone: http://eureka6001.com:6001/eureka
+      defaultZone: http://eureka6001.com:6001/eureka
   instance:
     instanceId: ${spring.application.name}:${server.port}
     prefer-ip-address: true
